--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "async-ls": "0.0.3",
     "body-parser": "^1.14.2",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
