--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prelude-ls": "^1.1.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
+    "react-markdown": "^1.2.2",
     "react-router": "^2.0.0-rc4",
     "socket.io": "^1.4.4",
     "socket.io-client": "^1.4.4"
