--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "coverage": "gulp coverage",
     "coveralls": "gulp coverage  && cat coverage/lcov.info | coveralls",
     "configure": "touch store.json && cp config.ls.template config.ls",
-    "postinstall": "gulp build && npm run configure",
+    "postinstall": "npm run configure && gulp build",
     "start": "./node_modules/livescript/bin/lsc server.ls"
   },
   "author": "",
