--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-markdown": "^1.2.2",
     "react-router": "^2.0.0-rc4",
     "socket.io": "^1.4.4",
-    "socket.io-client": "^1.4.4"
+    "socket.io-client": "^1.4.4",
+    "whatwg-fetch": "^0.10.1"
   }
 }
